# xf86-input-fujitouch

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  fujitsu.c  fujitsu.h  libtouch.c  libtouch.h
